apps/media/deluge/deployment.yaml
#
# Reference:
# https://github.com/binhex/arch-delugevpn
#

apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: deluge
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: deluge
  type: ClusterIP
  ports:
    - name: http
      port: 8112
      protocol: TCP
      targetPort: http
    - name: privoxy
      port: 8118
      protocol: TCP
      targetPort: privoxy
    - name: microsocks
      port: 9118
      protocol: TCP
      targetPort: microsocks
    - name: thin
      port: 58846
      protocol: TCP
      targetPort: thin
    - name: vpn-tcp
      port: 58946
      protocol: TCP
      targetPort: vpn-tcp
    - name: vpn-udp
      port: 58946
      protocol: UDP
      targetPort: vpn-udp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: deluge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: deluge
    spec:
      restartPolicy: Always
      affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: arch-delugevpn
          image: ghcr.io/binhex/arch-delugevpn:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8112
              protocol: TCP
            - name: privoxy
              containerPort: 8118
              protocol: TCP
            - name: microsocks
              containerPort: 9118
              protocol: TCP
            - name: thin
              containerPort: 58846
              protocol: TCP
            - name: vpn-tcp
              containerPort: 58946
              protocol: TCP
            - name: vpn-udp
              containerPort: 58946
              protocol: UDP
          # livenessProbe:
          #   exec:
          #     command: ["/bin/bash", "-c", "curl -sL --fail http://localhost:8112 && curl -sL --fail https://google.com || exit 1"]
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            fsGroup: 0
            # sysctls:
            #   - name: net.ipv4.conf.all.src_valid_mark
            #     value: "1"
            privileged: true
          volumeMounts:
            - name: tz
              mountPath: /etc/localtime
              readOnly: true
            - name: deluge-pvc
              mountPath: /config
              subPath: config
            - name: deluge-pvc
              mountPath: /data
              subPath: data
      volumes:
        - name: tz
          hostPath:
            path: /etc/localtime
            type: File
        - name: deluge-pvc
          persistentVolumeClaim:
            claimName: deluge-pvc
