apps/media/deluge/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deluge-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: deluge
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`deluge.saldivar.io`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: deluge
          port: http
